# ChangeLog for www-servers/apache
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.175 2012/01/01 21:31:13 dilfridge Exp $

  01 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org> +ChangeLog-2008:
  Split ChangeLog.

  02 Dec 2011; Steve Dibb <beandog@gentoo.org> -apache-2.2.14-r1.ebuild,
  -apache-2.2.15.ebuild, -apache-2.2.16.ebuild, -apache-2.2.16-r1.ebuild,
  -apache-2.2.17.ebuild, -apache-2.2.20.ebuild, -apache-2.2.21.ebuild:
  Remove old versions with security vulns.

  29 Oct 2011; Raúl Porcel <armin76@gentoo.org> apache-2.2.21-r1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #385859

  24 Oct 2011; Markus Meier <maekke@gentoo.org> apache-2.2.21-r1.ebuild:
  x86 stable, bug #385859

  23 Oct 2011; Markus Meier <maekke@gentoo.org> apache-2.2.21-r1.ebuild:
  arm stable, bug #385859

  22 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> apache-2.2.21-r1.ebuild:
  ppc/ppc64 stable wrt #385859

  19 Oct 2011; Jeroen Roovers <jer@gentoo.org> apache-2.2.21-r1.ebuild:
  Stable for HPPA (bug #385859).

  19 Oct 2011; Tony Vroon <chainsaw@gentoo.org> apache-2.2.21-r1.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in security bug #385859.

*apache-2.2.21-r1 (18 Oct 2011)

  18 Oct 2011; Peter Volkov <pva@gentoo.org> +apache-2.2.21-r1.ebuild:
  Fix Reverse Proxy Mode Security Bypass (CVE-2011-3368), bug #385859 by
  Agostino Sarubbo. Init script fixes: 1. use extra_{,started}commands, bug
  #385637 by Martin von Gagern; 2. check config during restart, bug #384997 wrt
  Christian Ruppert (idl0r); 3. don't use pidof to check for running instances
  to make it more ConTainer friendly, bug #384267 by Stef Simoens. Updated
  defaults in 00_default_settings.conf to better match upstream intentions, bug
  #387157 by Steve Dibb.

  27 Sep 2011; Kacper Kowalik <xarthisius@gentoo.org> apache-2.2.21.ebuild: