@@ -1,26 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA1
 
 DIST gentoo-apache-2.2.21-r1-20111018.tar.bz2 64196 RMD160 fb3d4c1716ecf2763caef5f5d927d8276ebaca47 SHA1 347138d7738c6bbfc0eab1d520f101ac1bb0fa35 SHA256 8c78505a34184b526099db5edb36b6b4ab57b6d2a43eec537ca7984f94639ec7
+DIST gentoo-apache-2.2.21-r2-20120212.tar.bz2 64556 RMD160 d90d955ba16ea5cea87ba75bf7484dd2bf833ec2 SHA1 d3d922b3a298dabcc20d6bc881e168cbb2a954a8 SHA256 bc1519135817b3b1366be0e22bca0489bb0cb0e8924413a3e5b379ab30293d79
 DIST httpd-2.2.21.tar.bz2 5324905 RMD160 6464a03d78ab858b1288ea9eef4cd5f73b60a9f1 SHA1 c02f9b05da9a7e316ff37d9053dc76a57ba51cb4 SHA256 18d5591fe48cfbac44fc20316036ffe17456df60bc3a2aaad238d56c6445577f
 EBUILD apache-2.2.21-r1.ebuild 2744 RMD160 44e1572e7aa2a9ae5fdb7b8000ede95591a117ff SHA1 7bb566b7a97d1b021e3db5f7a8d9a2c3a7d9756a SHA256 f9d203b3df8d8e7e40e55a2b9f91dad9fe25aa6d5a1e4656a71455f0369f025f
-MISC ChangeLog 11839 RMD160 0e94a8b533bb3fb4d25be9363edb850c0c2f637e SHA1 68ede3b673320bb463cc5f3182463dcb94e71294 SHA256 1b29cff6887464432ddec5f91d389460d18ab677d95d3277e58ff20adc808afa
+EBUILD apache-2.2.21-r2.ebuild 2705 RMD160 e36ab49c64a2d1b58c431f451b61514652988f9d SHA1 72a7f0e7acd5a2c493bd8efdb94d88855db550c0 SHA256 5b9f4d91f57012fffa0ffa2a925bacaba358a8fa52eb741c12090740081439e3
+MISC ChangeLog 12075 RMD160 b5d6b7b0154d01f94587e125c02bbfd58865b317 SHA1 f30f796572d15b04eac2df1152900b03dfc90e3d SHA256 783d9cfd3148c626987025f874fbe1eaea83a73f147fa1244363dbb64bfb0bd8
 MISC ChangeLog-2008 105137 RMD160 0ee2162a0e57feab08fd8ee0c04b43bcf63ba9b4 SHA1 28bc5fda825c08a5a2b1d03dbfbc128d083507cf SHA256 4afec18ad3c76df40314edb37b5512f81ca6223c38a899534d9d15342481accf
 MISC metadata.xml 767 RMD160 3b4215160698916a68964b0bcbd63907fef5b124 SHA1 a27777ba897768cfbcebf7779a6cf8be2029ed9b SHA256 8378ce2aa8e0adbe9d7b2f093f115a11d0ec170c74232111b7f46bd692e5aa5c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPANEcAAoJEEb+UGWnxTyHa8YP/iNNdkDpkBmHZryL8PPuOYx6
-+UYN6cRlDxlLcE1AJOJZgS5vpacjtZuQ3imDoSYtS4kciQIYdovDt8xoL4SjjHyz
-iQ+pikhiPqUr1+8h6v1jQfPyO6cCKG+hAt/wuY0LjK3bEuLmDRVV9Qo1V+DPXJuo
-RNd1HeM0yYZTcev0cWV305WfePG8HwM61hSU1q/441/fNc0eSkb0WUJeKn/HouV2
-ZZyju3x4HKTJfPuXKqLLPlFr4wlRP6beAENuS9PLEyocfGSJjOmaD+YTB8lhX3Nk
-xDYwfTx2u5ul5JqSYBvuk04xqEIzQBh5AuVa9Stu+T+XVNHUYLDdQ7cbzYk5I3I9
-PvqAlHZMwBepI+d64AxNNB92nJo4rTk37Oj6IyvZ5yxfj6nYacZdrueots8oxt5s
-fI37yFW0N+wD1O9YfYvTiMcK6UTY454o+JL90tsuIrK8BEPOvWufUyI6RPJ9Dsbm
-3oiE8qKmZTvUg1x2yq7lOncjgusfjTtLAn8qfsTLOs1P5fGQT/bh8fXY/Qh12MVC
-LFfXwsQpTQEY5044VtCuY8BsNYsSkSLljFh1TMFmn1SWe0KCeYOrARWHpkzkSpDk
-M7aJCxJo4W3uOxC7CCPd6aErvCqw7/icOx9YG1xVQQ7YeRyvIioA2kEueKTsq5i9
-WfRTA4X3z6Egz1htdiRH
-=pVcv
+iQIcBAEBAgAGBQJPOIaaAAoJEC8ZTXQF1qEPS0kQAIiYPmqc/7YsFvkX8qajZUEK
+FZDd1j1L/Gu5+cXInzH2pbXSVVqAsSP1r8hgjEtHQYanXCTdQPG6boIaTPYWyYLJ
+tWUtPXPJ04IFosKob6qxtNYnQiPqmGFo9V3TOsQx6m34qhApSUeEG8O8XlVlBO6+
+rLpkYx17XMhTV4B+LHNMDATmYr1nOrmt411bXF3azT+oWynoBup5TBbfTqoIDhBM
+jKtzVxcvzqw1Lb1Q+15A3WC855aYrAvSCrddrNXvJdnrPIghXOz1fTxEBD+MoyB9
+L4T9NKTvytnmt23muhS129HRxv+JSJLTiZtVRi4wLglwilv8Xn70nhAUMDbYr1Nf
+77FAAPobF8nvnO16y/V6OyZvk/DZE+TrU7Fyyl1c/jllBIEpTU2AsRFO7KqO9LXq
+hEHv6tWkhYXj5U2AYW9T0epXOGX7sk5zk73YyDjhoE6M7hHdjImQrFxRYVriLa13
+p7/xrpJ8qZCS0tUVDq5LcDQ45LjiLzCMUBMjnFwXWildXlWcLRWQJYBEKb114yWG
+BZJAhoCA9v07eoR7Lq5q7veQNCL8+1ur++sQogWyZ8qhZlXXbDhk0bfv/x1lMK6Y
+fIgxn281NhhNTMru8Yy1rYIbwTmrXUKRO4OK5BUvhU8ytQmglvtbHvAznHSA+SwR
+9ggDoYkizCIv5LGp5SIj
+=yklx
 -----END PGP SIGNATURE-----
