@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/apache
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.175 2012/01/01 21:31:13 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.176 2012/02/13 03:44:37 jmbsvicetto Exp $
+
+*apache-2.2.21-r2 (12 Feb 2012)
+
+  12 Feb 2012; <jmbsvicetto@gentoo.org> +apache-2.2.21-r2.ebuild:
+  Add patch to fix the build with libpcre-8.30. Fixes bug #402351.
+  Thanks to John Keeping <john.keeping@lineone.net> for the patch.
 
   01 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org> +ChangeLog-2008:
   Split ChangeLog.
